--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ pipeline  {
           sh 'mvn  test'
         }
         post{
-          alway{
+          always{
               junit 'target/surefire-reports/*.xml'
               }
          }
