--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,6 +9,7 @@ pipeline  {
      stages{
       stage('Build') {
         steps {
+        echo "Building the project"
           sh 'mvn  -B  -DskipTests clean package'
         }
      }
