--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,6 +24,10 @@ pipeline  {
               }
          }
      }
+     stage('SonarQube analysis') {
+    def scannerHome = tool 'SonarScanner 4.0';
+    withSonarQubeEnv('My SonarQube Server') { // If you have configured more than one global server connection, you can specify its name
+      sh "${scannerHome}/bin/sonar-scanner"
     
    }  
 }
