--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline  {
         agent {
             docker {
-            image 'maven:3.6.3-jdk-11'
+            image 'maven:3.9.3'
             args '-v /root/.m2:/root/.m2'
             }
      }
@@ -27,7 +27,7 @@ pipeline  {
      stage("build & SonarQube analysis") {
             agent any
             steps {
-              withSonarQubeEnv('sonarqube') {
+              withSonarQubeEnv('sonar-server') {
                 sh 'java -version'
                 sh 'mvn clean package sonar:sonar'
               }
