--- a/JenkinsFile
+++ b/JenkinsFile
@@ -27,7 +27,7 @@ pipeline  {
      stage("build & SonarQube analysis") {
             agent any
             steps {
-              withSonarQubeEnv('sonar-server') {
+              withSonarQubeEnv('sonarserver') {
                 sh 'java -version'
                 sh 'mvn clean package sonar:sonar'
               }
