--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  <sonar.projectKey>Sample30</sonar.projectKey>
+  <sonar.organization>vasavielluru</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
