--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,7 +13,16 @@ pipeline  {
           sh 'mvn  -B  -DskipTests clean package'
         }
      }
-         
+        
+        stage("build & SonarQube analysis") {
+            agent any
+            steps {
+              withSonarQubeEnv('sonarserver') {
+                sh 'java -version'
+                sh 'mvn clean package sonar:sonar'
+              }
+            }
+          } 
      stage('Test') {
         steps {
           sh 'mvn  test'
@@ -24,15 +33,32 @@ pipeline  {
               }
          }
      }
-     stage("build & SonarQube analysis") {
-            agent any
-            steps {
-              withSonarQubeEnv('sonarserver') {
-                sh 'java -version'
-                sh 'mvn clean package sonar:sonar'
-              }
+     stage('collect artifact'){
+     steps{
+     archiveArtifacts artifacts: 'target/*.jar', followSymlinks: false
+     }
+     }
+     stage('deploy to artifactory')
+     {
+     steps{
+     
+     rtUpload (
+    serverId: 'Artifactory_server',
+    spec: '''{
+          "files": [
+            {
+              "pattern": "target/*.jar",
+              "target": "art-doc-dev-loc"
             }
-          }
+         ]
+    }''',
+ 
+  
+    buildName: 'holyFrog',
+    buildNumber: '42'
+)
+     }}
+    
       }
     
    
